--- a/Amenazas-Vulnerabilidades.html
+++ b/Amenazas-Vulnerabilidades.html
@@ -82,24 +82,43 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
                     <figure>
-                        <img src="img/Seguridad.jpg" alt="Seguridad">
+                        <img src="img/Amenazas.jpg" alt="Seguridad">
                   	</figure>
                     <p>
-                        <dt><b>INTRODUCCION</b></dt>
+                        <dt><b>AMENAZAS</b></dt>
                    </p>
 			
 			<p>
-<br> La seguridad informática es la encargada de diseñar las normas, procedimientos y técnicas, para asegurar la integridad, disponibilidad y privacidad de la información en un sistema informático e intentar reducir las amenazas que se pueden encontrar. 
-Encontramos dos tipos de seguridad: <br>
-<br>SEGURIDAD LÓGICA<br>
-<br>Se encarga de asegurar la parte software  de un  sistema informático  que se compone de  todo lo que no es físico es decir programas y los datos la seguridad lógica se encarga de controlar el acceso al sistema informático  desde el punto de vista  del software 
-se realice correctamente y  por  usuarios autorizados los cuales tiene un usuario y contraseña y desde afuera del sistema informático desde una red externa usando VPN <br>
-<br>SEGURIDAD FÍSICA<br>
-<br>Se encarga de asegurara toda la infraestructura tecnológica que brinda soporte a la información durante su uso, tránsito y almacenamiento. Se compone de cualquier equipo en el cual se almacene, procese o transmita la información de la empresa o de la persona.<br>
-Ejemplos: las computadoras, los servidores, los equipos portátiles, los medios de almacenamiento los equipos de conectividad, enrutadores, switchs y cualquier otro elemento de una red de computadoras por donde transita la información.
-				
-<br> En la actualidad la seguridad de la información es de suma importancia para las empresas y para las personas  ya que con los avances tecnológicos han permitido el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la implementación 
-de un sistema de seguridad permitirá minimizar las vulnerabilidades de los sistemas y de la información contenida en ellos, así como de las redes privadas y sus recursos. <br>
+<br> Un sistema informático está expuesto al peligro por medio de dos factores: Las amenazas y las vulnerabilidades.<br>
+
+Las cuales se pueden dar de dos formas:<br>
+
+<br>•	INTENCIONALES: Son dadas por las personas por ejemplo el robo de información por los hackers, la propagación de software malicioso entre otras.<br>
+
+<br>Amenazas por Hardware<br>
+
+<br>Se da por fallas físicas que se encuentra presente en cualquier elemento de dispositivos que conforman la computadora. Los problemas más Frecuentes son el bajo voltaje, ruido electromagnético, distorsión, interferencias, alto voltaje, etc.<br>
+
+<br>Amenazas software<br>
+
+<br>TIPOS<br>
+<br>•	Software de desarrollo: es un tipo de software personalizado, puede ser creado con el fin de atacar un sistema completo o aprovechar alguna de sus características para violar su seguridad.<br>
+<br>•	Software de aplicación: este software no fue creado específicamente para realizar ataques, pero tiene características que pueden ser usadas de manera maliciosa para atacar un sistema.<br>
+<br>•	Código malicioso: es cualquier software que entra en un sistema de cómputo sin ser invitado e intenta romper las reglas, esto incluye caballos de Troya, virus, gusanos informáticos y otras amenazas programadas.<br>
+<br>•	Virus: este tipo de código malicioso tiene como principal característica la capacidad de duplicarse a si mismo usando recursos del sistema infectado, propagando su infección rápidamente.
+<br>•	NO INTENCIONALES: Son dadas por fenómenos naturales que provocan desastres los cuales representan los riesgos más fuertes y por lo cual se debe desarrollar planes de contingencia y aplicarse medidas en pro de la seguridad de la información.<br>
+
+
+<br>VULNERABILIDADES<br>
+<br>Las vulnerabilidades están directa interrelación con las amenazas porque si no existe una amenaza, tampoco existe la vulnerabilidad que son las debilidades que tiene un sistema para ser atacado. <br>
+<br>Tipo Hardware<br>
+<br>Está relacionada con el acceso al sistema y se pueden presentar en forma de malas prácticas de acceso de personal a los sistemas y uso de medios físicos de almacenamiento de información que permitan extraer datos del sistema de manera no autorizada.<br>
+<br>Tipo Natural <br>
+<br>Son todo tipo de desastres naturales que causan daño a un sistema, principalmente en deficiencias de las medidas tomadas para afrontar los desastres, por ejemplo no disponer de reguladores, no-breaks, mal sistema de ventilación o calefacción, etc.<br>
+<br>Tipo Software<br>
+<br>Dado por programas maliciosos<br>
+<br>Red<br>
+<br>Aquí son muy vulnerables porque aquí se comparten muchos  recursos como hardware, software, recurso humano y se presentan muchos problemas como: Debilidad en el diseño de protocolos utilizados en las redes, políticas de seguridad deficiente e inexistente.<br>
 
                     </p>
       			</article>
