--- a/Amenazas-Vulnerabilidades.html
+++ b/Amenazas-Vulnerabilidades.html
@@ -104,7 +104,7 @@ TIPOS<br>
 •	Software de aplicación: este software no fue creado específicamente para realizar ataques, pero tiene características que pueden ser usadas de manera maliciosa para atacar un sistema.<br>
 •	Código malicioso: es cualquier software que entra en un sistema de cómputo sin ser invitado e intenta romper las reglas, esto incluye caballos de Troya, virus, gusanos informáticos y otras amenazas programadas.<br>
 •	Virus: este tipo de código malicioso tiene como principal característica la capacidad de duplicarse a si mismo usando recursos del sistema infectado, propagando su infección rápidamente.
-•	NO INTENCIONALES: Son dadas por fenómenos naturales que provocan desastres los cuales representan los riesgos más fuertes y por lo cual se debe desarrollar planes de contingencia y aplicarse medidas en pro de la seguridad de la información.<br>
+ <br>NO INTENCIONALES: Son dadas por fenómenos naturales que provocan desastres los cuales representan los riesgos más fuertes y por lo cual se debe desarrollar planes de contingencia y aplicarse medidas en pro de la seguridad de la información.<br>
 
 <br>VULNERABILIDADES<br>
 <br>Las vulnerabilidades están directa interrelación con las amenazas porque si no existe una amenaza, tampoco existe la vulnerabilidad que son las debilidades que tiene un sistema para ser atacado. <br>
